--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         spellcheck="false">
         <button><img src = "images/search.png"></button>
     </div>
+    <div class ="weather">
+        <img src="images/rain.png" class="weather-icon">
+        <h1 class="temp">34°C</h1>
+        <h2 class="city">Prayagraj</h2>
+    </div>
 </div>
 </body>
 </html>
