--- a/index.html
+++ b/index.html
@@ -47,8 +47,6 @@
     const response= await fetch( apiUrl + city + `&appid=${apiKey}`);
     var data = await response.json();
 
-    console.log(data);
-
     document.querySelector(".city").innerHTML=data.name;
     document.querySelector(".temp").innerHTML=Math.round(data.main.temp) + "°C";
     document.querySelector(".humidity").innerHTML=data.main.humidity + "%";
@@ -69,6 +67,8 @@
     else if(data.weather[0].main == "Mist"){
         weathetIcon.src = "images/mist.png";
     }
+
+    document.querySelector(".weather").style.display ="block";
    }
 
    searchBtn.addEventListener("click", ()=>{
