--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         spellcheck="false">
         <button><img src = "images/search.png"></button>
     </div>
+    <div class="error">
+        <p>Invalid City Name</p>
+    </div>
     <div class ="weather">
         <img src="images/rain.png" class="weather-icon">
         <h1 class="temp">34°C</h1>
@@ -45,7 +48,15 @@
 
    async function checkWeather(city) {
     const response= await fetch( apiUrl + city + `&appid=${apiKey}`);
-    var data = await response.json();
+
+    if(response.status == 404){
+        document.querySelector(".error").style.display="block";
+        document.querySelector(".weather").style.display="none";
+    }else{
+        var data = await response.json();
+    }
+
+    
 
     document.querySelector(".city").innerHTML=data.name;
     document.querySelector(".temp").innerHTML=Math.round(data.main.temp) + "°C";
@@ -69,6 +80,7 @@
     }
 
     document.querySelector(".weather").style.display ="block";
+    document.querySelector(".error").style.display="none";
    }
 
    searchBtn.addEventListener("click", ()=>{
