Update HTML File

--- a/index.html
+++ b/index.html
@@ -1,120 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather App</title>
-    <link rel="stylesheet" href="style.css">
-    
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Weather App</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div class="app-bg">
     <div class="card">
-        <div class="search">
-            <input type="text" placeholder="Enter City Name" spellcheck="false">
-            <button><img src="images/search.png"></button>
-        </div>
+      <div class="search">
+        <input type="text" placeholder="Enter City Name" spellcheck="false">
+        <button><img src="images/search.png"></button>
+      </div>
 
-        <div class="unit-toggle">
-            <button id="unitBtn">°C / °F</button>
-        </div>
+      <div class="unit-toggle">
+        <button id="unitBtn">°C / °F</button>
+      </div>
 
-        <div class="loader" id="loader"></div>
+      <div class="theme-toggle">
+        <button id="themeBtn">🌙</button>
+      </div>
 
-        <div class="error">
-            <p>Invalid City Name</p>
-        </div>
+      <div class="loader" id="loader"></div>
+      <div class="error"><p>Invalid City Name</p></div>
 
-        <div class="weather">
-            <img src="images/rain.png" class="weather-icon">
-            <h1 class="temp">34°C</h1>
-            <h2 class="city">Prayagraj</h2>
-            <div class="details">
-                <div class="col">
-                    <img src="images/humidity.png">
-                    <div>
-                        <p class="humidity">50%</p>
-                        <p>Humidity</p>
-                    </div>
-                </div>
-                <div class="col">
-                    <img src="images/wind.png">
-                    <div>
-                        <p class="wind">15 km/h</p>
-                        <p>Wind Speed</p>
-                    </div>
-                </div>
+      <div class="weather">
+        <img src="images/clear.png" class="weather-icon">
+        <h1 class="temp"></h1>
+        <h2 class="city"></h2>
+        <div class="details">
+          <div class="col">
+            <img src="images/humidity.png">
+            <div>
+              <p class="humidity"></p>
+              <p>Humidity</p>
             </div>
+          </div>
+          <div class="col">
+            <img src="images/wind.png">
+            <div>
+              <p class="wind"></p>
+              <p>Wind Speed</p>
+            </div>
+          </div>
         </div>
+      </div>
+
+      <div class="forecast-container"></div>
     </div>
+  </div>
 
-    <script>
-        const apiKey = "fa13b97bda723efe8e86966a209972fe";
-        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
+  <script>
+    const apiKey = "fa13b97bda723efe8e86966a209972fe";
+    const weatherURL = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
+    const forecastURL = "https://api.openweathermap.org/data/2.5/forecast?units=metric&q=";
 
-        const searchBox = document.querySelector(".search input");
-        const searchBtn = document.querySelector(".search button");
-        const weatherIcon = document.querySelector(".weather-icon");
-        const loader = document.getElementById("loader");         
-        const unitBtn = document.getElementById("unitBtn");       
+    const searchBox = document.querySelector(".search input");
+    const searchBtn = document.querySelector(".search button");
+    const weatherIcon = document.querySelector(".weather-icon");
+    const loader = document.getElementById("loader");
+    const unitBtn = document.getElementById("unitBtn");
+    const themeBtn = document.getElementById("themeBtn");
+    const forecastContainer = document.querySelector(".forecast-container");
 
-        let isCelsius = true;                                     
-        let currentData = null;                                  
+    let isCelsius = true;
+    let currentData = null;
 
-        async function checkWeather(city) {
-            loader.style.display = "block";                       
-            document.querySelector(".weather").style.display = "none";
-            document.querySelector(".error").style.display = "none";
+    async function checkWeather(city) {
+      if (!city) {
+        document.querySelector(".weather").style.display = "none";
+        forecastContainer.style.display = "none";
+        document.querySelector(".error").style.display = "none";
+        return;
+      }
 
-            try {
-                const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
-                if (response.status == 404) {
-                    document.querySelector(".error").style.display = "block";
-                } else {
-                    const data = await response.json();
-                    currentData = data;                           
-                    displayWeather(data);                         
-                }
-            } catch (error) {
-                document.querySelector(".error").style.display = "block";
-            } finally {
-                loader.style.display = "none";                    
-            }
+      loader.style.display = "block";
+      document.querySelector(".weather").style.display = "none";
+      forecastContainer.style.display = "none";
+      document.querySelector(".error").style.display = "none";
+
+      try {
+        const [weatherRes, forecastRes] = await Promise.all([
+          fetch(weatherURL + city + `&appid=${apiKey}`),
+          fetch(forecastURL + city + `&appid=${apiKey}`)
+        ]);
+
+        if (weatherRes.status === 404) {
+          document.querySelector(".error").style.display = "block";
+          return;
         }
 
-        function displayWeather(data) {
-            document.querySelector(".city").innerHTML = data.name;
-            document.querySelector(".temp").innerHTML = formatTemp(data.main.temp);  
-            document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
-            document.querySelector(".wind").innerHTML = data.wind.speed + " km/h";
+        const weatherData = await weatherRes.json();
+        const forecastData = await forecastRes.json();
 
-            if (data.weather[0].main == "Clouds") {
-                weatherIcon.src = "images/clouds.png";
-            } else if (data.weather[0].main == "Clear") {
-                weatherIcon.src = "images/clear.png";
-            } else if (data.weather[0].main == "Rain") {
-                weatherIcon.src = "images/rain.png";
-            } else if (data.weather[0].main == "Drizzle") {
-                weatherIcon.src = "images/drizzle.png";
-            } else if (data.weather[0].main == "Mist") {
-                weatherIcon.src = "images/mist.png";
-            }
+        currentData = weatherData;
+        displayWeather(weatherData);
+        displayForecast(forecastData);
+      } catch (err) {
+        document.querySelector(".error").style.display = "block";
+      } finally {
+        loader.style.display = "none";
+      }
+    }
 
-            document.querySelector(".weather").style.display = "block";
+    function displayWeather(data) {
+      document.querySelector(".city").innerText = data.name;
+      document.querySelector(".temp").innerText = formatTemp(data.main.temp);
+      document.querySelector(".humidity").innerText = data.main.humidity + "%";
+      document.querySelector(".wind").innerText = data.wind.speed + " km/h";
+
+      const iconMap = {
+        Clouds: "clouds.png",
+        Clear: "clear.png",
+        Rain: "rain.png",
+        Drizzle: "drizzle.png",
+        Mist: "mist.png"
+      };
+      weatherIcon.src = "images/" + (iconMap[data.weather[0].main] || "default.png");
+
+      document.querySelector(".weather").style.display = "block";
+    }
+
+    function displayForecast(forecastData) {
+      forecastContainer.innerHTML = "";
+      const daily = {};
+
+      forecastData.list.forEach(item => {
+        const date = item.dt_txt.split(" ")[0];
+        if (!daily[date] && item.dt_txt.includes("12:00:00")) {
+          daily[date] = item;
         }
+      });
 
-        function formatTemp(tempC) {                               
-            return isCelsius ? `${Math.round(tempC)}°C` : `${Math.round(tempC * 9/5 + 32)}°F`;
-        }
+      Object.keys(daily).slice(0, 5).forEach(date => {
+        const dayData = daily[date];
+        const temp = isCelsius ? Math.round(dayData.main.temp) + "°C" : Math.round(dayData.main.temp * 9/5 + 32) + "°F";
+        const icon = dayData.weather[0].main;
+        const iconMap = {
+          Clouds: "clouds.png",
+          Clear: "clear.png",
+          Rain: "rain.png",
+          Drizzle: "drizzle.png",
+          Mist: "mist.png"
+        };
 
-        unitBtn.addEventListener("click", () => {                 
-            isCelsius = !isCelsius;
-            if (currentData) displayWeather(currentData);
-        });
+        const card = document.createElement("div");
+        card.classList.add("forecast-card");
+        card.innerHTML = `
+          <h3>${new Date(date).toLocaleDateString('en-US', { weekday: 'short' })}</h3>
+          <img src="images/${iconMap[icon] || "default.png"}">
+          <p>${temp}</p>
+        `;
+        forecastContainer.appendChild(card);
+      });
 
-        searchBtn.addEventListener("click", () => {
-            checkWeather(searchBox.value);
-        });
-    </script>
+      forecastContainer.style.display = "grid";
+    }
+
+    function formatTemp(tempC) {
+      return isCelsius ? `${Math.round(tempC)}°C` : `${Math.round(tempC * 9/5 + 32)}°F`;
+    }
+
+    searchBtn.addEventListener("click", () => {
+      checkWeather(searchBox.value.trim());
+    });
+
+    unitBtn.addEventListener("click", () => {
+      isCelsius = !isCelsius;
+      if (currentData) displayWeather(currentData);
+      if (searchBox.value) checkWeather(searchBox.value);
+    });
+
+    themeBtn.addEventListener("click", () => {
+      document.body.classList.toggle("dark-mode");
+      themeBtn.textContent = document.body.classList.contains("dark-mode") ? "☀️" : "🌙";
+    });
+  </script>
 </body>
 </html>
